--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,8 @@
   "packageManager": "pnpm@10.24.0",
   "dependencies": {
     "dotenv": "^17.2.3",
-    "express": "^5.2.1"
+    "express": "^5.2.1",
+    "mongoose": "^9.1.1"
   },
   "devDependencies": {
     "@types/express": "^5.0.6",
